<resources>
    <string name="app_name">C196_Term_Tracker</string>
    <string name="welcome">Student Portal</string>
    <string name="termButton">Terms</string>
    <string name="termSelectorButton">Term</string>
    <string name="coursesButton">Courses</string>
    <string name="instructorButton">Instructors</string>
    <string name="assessmentsButton">Assessments</string>
    <string name="addTerm">Add Term</string>
    <string name="termName">Term Name</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="courses">Courses</string>
    <string name="addCourse">Add Course</string>
    <string name="courseName">Course Name</string>
    <string name="statusSelectorButton">Status</string>
    <string name="instructorSelectorButton">Instructor</string>


</resources>