<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCoursesActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="28sp"
        android:text="@string/addCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/courseNameEditText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/courseName"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        android:autofillHints=""/>

    <Button
        android:id="@+id/courseStartSelectBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/startDate"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseNameEditText"
        style = "?spinnerStyle" />

    <Button
        android:id="@+id/courseEndSelectBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/endDate"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseStartSelectBTN"
        style = "?spinnerStyle" />

    <Button
        android:id="@+id/termSelectBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/termSelectorButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseEndSelectBTN"
        style = "?spinnerStyle" />

    <Button
        android:id="@+id/statusSelectBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/statusSelectorButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termSelectBTN"
        style = "?spinnerStyle" />

    <Button
        android:id="@+id/instructorSelectBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/instructorSelectorButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusSelectBTN"
        style = "?spinnerStyle" />

    <Button
        android:id="@+id/addCourseBTN"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/instructorSelectBTN"
        android:layout_margin="50sp"
        android:text="@string/addCourse"
        android:background="@color/primaryBlue"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>