<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTermActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="28sp"
        android:text="@string/addTerm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <EditText
        android:id="@+id/termNameEditText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/termName"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        android:autofillHints=""/>

    <Button
        android:id="@+id/termStartSelectBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/startDate"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termNameEditText"
        style = "?spinnerStyle" />

    <Button
        android:id="@+id/termEndSelectBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/endDate"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termStartSelectBTN"
        style = "?spinnerStyle" />

    <Button
        android:id="@+id/addTermBTN"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/termEndSelectBTN"
        android:layout_margin="50sp"
        android:text="@string/addTerm"
        android:background="@color/primaryBlue"
        android:textColor="@color/white"
        android:textSize="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>

